--- a/package.json
+++ b/package.json
@@ -7,19 +7,14 @@
     "@actions/core": "^1.2.7",
     "@actions/github": "^4.0.0",
     "@octokit/webhooks-definitions": "^3.67.3",
-    "husky": "^6.0.0",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.28.3"
+    "@vercel/ncc": "^0.28.3",
+    "pre-commit": "^1.2.2"
   },
   "scripts": {
-    "build": "ncc build src/index.ts --license licenses.txt",
-    "prepare": "husky install"
+    "build": "ncc build src/index.ts --license licenses.txt"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn build && git add -A ."
-    }
-  }
+  "pre-commit": "yarn build && git add -A ."
 }
